Formatted code/added all style tags to css

--- a/portfolioWebste.html
+++ b/portfolioWebste.html
@@ -1,30 +1,32 @@
-<!DOCTYPE html!>
+<!DOCTYPE html>
 <html>
-<div id="wrapper">
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset = "UTF-8">
+    <meta name="author" content="Ivan Lara">
+    <meta name="title" content="Front-End Developer">
     <link rel = "stylesheet"
     type = "text/css"
     href = "css/style.css" />
-    
-    <div class="header_container">
-      <div class="logo">
-        <img src="https://cdn.worldvectorlogo.com/logos/udacity.svg" alt="Udacity Logo" style="width:100px;height:100px; float: right;">
-      </div>
-
-      <div class="header_title">
-        <h1>Ivan Lara</h1>
-        <h3>Front-End Developer</h3>
-      </div>
-    </div>
   </head>
 
   <!-- Start of the body -->
 
   <body>
+    <div class="wrapper">
     <div class="body">
+      <div class="header_container">
+        <div class="logo">
+          <img src="https://cdn.worldvectorlogo.com/logos/udacity.svg"
+            alt="Udacity Logo">
+          </div>
+
+      <div class="header_title">
+        <h1>Ivan Lara</h1>
+        <p>Front-End Developer</p>
+      </div>
+    </div>
       <div class="img">
         <img src="https://voxconferences.files.wordpress.com/2016/10/codemedia_posts_set1_1600x800.jpg?quality=80&strip=info" alt="Body Pic" style="width: 100%;">
       </div>
@@ -81,7 +83,6 @@
         </a>
       </div>
     </div>
-
+  </div>
   </body>
-</div>
 </html>
