CSS updated/cleaned up, removed style from HTML.

--- a/portfolioWebste.html
+++ b/portfolioWebste.html
@@ -5,7 +5,8 @@
 	<meta content="width=device-width, initial-scale=0.1" name="viewport">
 	<meta charset="UTF-8">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
-</head><!-- Start of the body -->
+</head>
+<!-- Start of the body -->
 <body>
 	<div class="header_container">
 		<div class="logo"><img alt="logo" src="https://cdn.worldvectorlogo.com/logos/udacity.svg"></div>
@@ -15,7 +16,7 @@
 		</div>
 	</div>
 	<div class="body">
-		<div class="img"><img alt="Body Pic" src="https://voxconferences.files.wordpress.com/2016/10/codemedia_posts_set1_1600x800.jpg?quality=80&strip=info" style="width: 100%;"></div>
+		<div class="img"><img alt="Body Pic" src="https://voxconferences.files.wordpress.com/2016/10/codemedia_posts_set1_1600x800.jpg?quality=80&strip=info"></div>
 		<div class="body_title">
 			<h2>Featured Work</h2>
 		</div>
